[package]
name = "brew_calculator"
version = "0.1.0"
authors = ["Jakob <jakob.lindqvist.92@gmail.com>"]
edition = "2018"
description = "Brew calculator"
license = "GPL-3.0"
repository = "https://github.com/BryggansBryggeri/brew_calculator"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
